# clyde

./: ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude_config.rs  claude_sync.rs  commands.rs  engine.rs  import_claude.rs  lib.rs  main.rs  model.rs  oauth.rs  proxy.rs  ratelimit.rs  usage.rs  vault.rs
src/components/: AccountCard.tsx  AddAccountDialog.tsx  IntegrationCard.tsx  RoutingBar.tsx  UsageGauge.tsx
src/lib/: api.ts  format.ts  types.ts  useSnapshot.ts
src/views/: Dashboard.tsx  Onboarding.tsx
