[package]
name = "clyde"
version = "0.2.0"
description = "Multi-account switcher for Claude Code"
authors = ["Clyde contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Abiroot/clyde"

[lib]
# The `_lib` suffix keeps the lib name unique from the bin name (Windows quirk).
name = "clyde_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri shell ---
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Async runtime + HTTP client ---
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# --- Secure storage (macOS Keychain / Windows Credential Manager / Linux Secret Service) ---
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# --- OAuth / PKCE ---
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"

# --- Time, errors, logging ---
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
